add explanation to test index page

--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,9 @@ $(function() {
 <style type="text/css">
 .load-inline-display { 
     background: blue;
+    width: 300px;
+    height: 100px;
+    padding: 5px;
 }
 .load-inline-display.error { 
     background: red;
@@ -24,6 +27,7 @@ $(function() {
 </style>
 </head>
 <body>
-<a href="page1.html">Test Load Inline</a>
+<p>The following link will load its content into a popup window.  Just remember I'm a programmer, not a designer, so it's very ugly :-).  To close the popup when there's an error, press ESC.</p>
+<p><a href="page1.html">Test Load Inline</a></p>
 </body>
 </html>
